# coffeegis-telegram-bot

./: .env.local  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 01ef42fbba01_fixing_user_preferences.py  184b39bf4a00_fixing_user_preferences.py  1a0a60db6031_fixing_user_preferences.py  1ce046c47f92_added_inline_requests_counter.py  2145e507643a_adding_is_admin.py  24fb2a6021ee_fixing_user_preferences.py  4af431244444_initial.py  58fb855701cf_added_inline_requests_counter_nullable.py  5bbd6af4abe1_change_is_phone_confirmed_from_integer_.py  60cea855ad06_added_user_preferences.py  c22da147fc67_fixing_user_preferences.py  d4a1479c4474_initial.py  efba6ad4438a_fixing_user_preferences.py  f863a24f25c7_fixing_user_preferences.py
alembic/versions_new/: cd7a341ecf10_initial.py
alembic/versions_old/: 374feb609c7a_fixed_profile_rel.py  5c4ba5485f76_added_requests_counter.py  5d6082a49b28_fixed_user_requests_columns.py  5db77e9e6423_added_user_requests.py  69b9b351d865_fixed_requests_author_telegram_id_column.py  8edfb97ab027_added_phone_confirmed.py  ac10d6a07918_added_user_notify.py  c18a88dc28db_fixed_user_requests_rel.py  c316f22d9741_changed_ids_to_bigint.py  d4a1479c4474_initial.py  (+2 more)
app/: main.py  settings.py
bot/: generators.py  keyboards.py  main.py  utils.py
db/: models.py
proto/: image_service.proto  image_service_pb2.py  image_service_pb2_grpc.py  main_service.proto  main_service_pb2.py  main_service_pb2_grpc.py
utils/: __init__.py  images_wrapper.py  proto_wrapper.py  redis_wrapper.py
(+7 files in other folders)
